src/test/ui/type-alias-impl-trait/multiple-def-uses-in-one-fn2.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/multiple-def-uses-in-one-fn2.rs:10:5
   |
LL |     (a.clone(), a)
   |     ^^^^^^^^^^^^^^ expected `A`, got `B`
   |
note: previous use here
  --> $DIR/multiple-def-uses-in-one-fn2.rs:10:5
   |
LL |     (a.clone(), a)
   |     ^^^^^^^^^^^^^^

error: aborting due to previous error

